# stronghold

./: POTFILES  README.md  com.ahoneybun.stronghold.appdata.xml.in  com.ahoneybun.stronghold.desktop.in  main.py  meson.build  window.py
data/: com.ahoneybun.stronghold.gschema.xml  com.ahoneybun.stronghold.json  meson.build
po/: meson.build
src/: meson.build  stronghold.gresource.xml  stronghold.in  window.ui
